--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
 
 .stats-container {
     display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 
 .stats-card {
@@ -30,6 +32,11 @@ body {
     margin: 1%;
     width: 100%;
     text-align: center;
+}
+
+.stats-card:hover {
+    box-shadow: 0 0 30px lightblue;
+    cursor: pointer;
 }
 
 #num-contributions, #total-raised, #num-games {
@@ -55,6 +62,7 @@ body {
     width: 300px;
     text-align: center;
     border-radius: 7px;
+    /* box-shadow: 0 0 30px lightblue; */
 }
 
 .game-card:hover {
